solve some test warnings